--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+body{
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  font-family: sans-serif;
+  background-image: url("./assets/Images/body-bg.png");
+  background-repeat: no-repeat;
+  background-size: auto;
 }
+.container{
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  max-width: 1200px;
+}
+.btn-next-prev:active{
+  box-shadow: rgba(0, 0, 0, 0.45) 1.5px 3.95px 2.6px;
+}
+.wrapper{
+  width: 100%;
+  overflow-x: scroll;
+  gap: 20px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+::-webkit-scrollbar{
+  display: none;
 }
